[package]
name = "convert_by_name"
description = "Derive From and Into for structs and enums based on field and variant names"
documentation = "https://docs.rs/convert_by_name"
homepage = "https://github.com/andy128k/convert_by_name/"
repository = "https://github.com/andy128k/convert_by_name/"
version = "0.0.2"
edition = "2021"
license = "MIT"

[dependencies]
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["derive", "parsing"] }

[lib]
proc-macro = true
