[package]
name = "convert_by_name"
description = "Derive From and Into for structs and enums based on field and variant names"
documentation = "https://docs.rs/convert_by_name"
homepage = "https://github.com/andy128k/convert_by_name/"
repository = "https://github.com/andy128k/convert_by_name/"
version = "0.0.4"
edition = "2021"
license = "MIT"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"

[lib]
proc-macro = true
